Fixed submit button that was off-center on smaller screens

--- a/style.css
+++ b/style.css
@@ -257,7 +257,7 @@ input:-webkit-autofill:active {
     }
 
     button {
-        margin: 40px 0 15px 0;
+        margin: 40px 0 15px 3vw;
         width: 250px;
     }
 }
